[gd_scene load_steps=4 format=3 uid="uid://cds3c6sx21yqn"]

[ext_resource type="Script" uid="uid://cxkdf0igm4dpg" path="res://freezables/projectile/projectile_spawner.gd" id="1_hmkwn"]
[ext_resource type="PackedScene" uid="uid://cbojxupfslta8" path="res://freezables/projectile/projectile.tscn" id="2_6a1mx"]
[ext_resource type="PackedScene" uid="uid://du2n7hnfpoyuw" path="res://freezables/freezable_component.tscn" id="3_xh3a0"]

[node name="ProjectileSpawner" type="Node2D"]
script = ExtResource("1_hmkwn")
projectile_scene = ExtResource("2_6a1mx")
override_speed = null
override_speed_value = null

[node name="SpawnIntervalTimer" type="Timer" parent="."]

[node name="FreezableComponent" parent="." instance=ExtResource("3_xh3a0")]

[connection signal="timeout" from="SpawnIntervalTimer" to="." method="_on_spawn_interval_timer_timeout"]
[connection signal="on_freeze_toggle" from="FreezableComponent" to="." method="_on_freezable_component_on_freeze_toggle"]
